--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
     "angular-route": "~1.4.7",
     "font-awesome": "~4.4.0",
     "angular-resource": "~1.4.7",
-    "angular-animate": "~1.4.7"
+    "angular-animate": "~1.4.7",
+    "jquery": "~2.1.4"
   }
 }
