--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
     "font-awesome": "~4.4.0",
     "angular-resource": "~1.4.7",
     "angular-animate": "~1.4.7",
-    "jquery": "~2.1.4"
+    "jquery": "~2.1.4",
+    "ngAnimate": "*"
   }
 }
